Revision history for {{$dist->name}}

{{$NEXT}}

0.001008  2012-02-19 10:12:34 CST6CDT
       - Added dep on parent, bump dep on DBD::SQLite to avoid silly failures

0.001007  2012-02-16 08:58:30 CST6CDT
       - removed the rest of the references to Method::Signatures::Simple

0.001006  2012-02-01 21:18:38 CST6CDT
       - Fix install to allow you to deploy to a given version (jnap)
       - Fix the backup method to use storage, not schema (jnap)
       - Fix the reasonable defaults for downgrading (jnap)
       - Stop warning all the time (ribasushi)
       - croak on a couple errors that should be fatal
       - Stop deleting the wrong version (for downgrades)
       - Fix documentation for in the Cookbook (moltar)
       - removed Method::Signatures::Simple stuff (dhoss)

0.001005  2011-04-13 15:21:08 CST6CDT
       - Add _any "version" for running code for all versions
       - Fix more minor pod niggles

0.001004  2010-07-29 22:09:10 CST6CDT
       - Fix incorrect POD in SYNOPSIS
       - Add missing attribute to DBIx::Class::DeploymentHandler (force_overwrite)

0.001003  2010-07-15 20:30:37 CST6CDT
       - Add Catalyst-y intro (norkakn)
       - fix bug caused by install_version_storage not passing a required param
       - add force_overwrite attribute to SQLTDM

0.001002  2010-07-07 21:11:45 CST6CDT
       - Add basic intro (norkakn)
       - install should now work in all cases, previously had a really bad bug
         where it would try to install the version storage table twice, which
         breaks everything
       - Fix issue where the ignore_version connect attr doesn't work in all
         situations

0.001001  2010-06-26 10:46:03 CST6CDT
       - Fix bad parameters in version_storage install methods
       - Fix Try::Tiny typo

0.001000  2010-06-10 21:55:40 CST6CDT
       - Use package logger instead of default logger

0.001000_14 2010-06-03 20:17:03 CST6CDT
       - Rename preinstall to initialize

0.001000_13 2010-06-01 23:30:15 CST6CDT