@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Added DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator::ScriptHelpers,
+         ALL users who use perl scripts during migrations are encouraged to use
+         schema_from_schema_loader from that package.
 
 0.001008  2012-02-19 10:12:34 CST6CDT
        - Added dep on parent, bump dep on DBD::SQLite to avoid silly failures
